k8s/environments/remote/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    platform.oficina/tenant: shared
    platform.oficina/app: monitoring
    platform.oficina/owner: igorsoaresalves
